[project]
name = "game_qu"
version = "2.1.4"
authors = [
    { name="Micah Ribbens", email="mdribbens22@outlook.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/codingspartan9/Game-Qu"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"